--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ img {
 .contact {
     display: flex;
     margin-left: auto;
+    margin-right: 15px;
 }
 
 .contact .contact-item + .contact-item {
@@ -281,6 +282,23 @@ img {
     margin-top: 50px;
 }
 
+.buisness-item {
+    position: relative;
+}
+
+.lable {
+    display: flex;
+    position: absolute;
+    background-color: rgba(47, 48, 58, 0.8);
+    color: #fff;
+    width: 100%;
+    height: 24%;
+    bottom: 0;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    align-items: center;
+    justify-content: center;
+}
 
 .team {
     background-color: var(--teem-bg);
@@ -341,6 +359,7 @@ img {
 .social-link:focus {
     background-color: var(--hover-color);
     fill: var(--white);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients {
@@ -369,6 +388,8 @@ img {
 .client-link:focus {
     fill: var(--hover-color);
     border-color: var(--hover-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* footer */
@@ -399,6 +420,7 @@ img {
     line-height: 1.71;
     color: var(--footer-contact);
     letter-spacing: 0.03em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact-link {
@@ -475,6 +497,9 @@ img {
     border-radius: 4px;
     min-width: 73px;
     padding: 6px 22px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-nav:not(:last-child) {
@@ -488,10 +513,44 @@ img {
     background-color: var(--hover-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
      0px 2px 2px rgba(0, 0, 0, 0.12);
+    
+}
+
+.filter-list {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .filter-link {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter-img {
+    position: relative;
     overflow: hidden;
+}
+
+.animate {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 1px;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.animate-text {
+    
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    padding: 63px 24px;
 }
 
 .filter-link:hover,
@@ -501,11 +560,8 @@ img {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.filter-list {
-    margin-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+.filter-link:hover .animate {
+    transform: translateY(0);
 }
 
 
