--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,7 @@ img {
     height: 44px;
     border-radius: 50px;
     fill: #afb1b8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -359,16 +360,18 @@ img {
 .social-link:focus {
     background-color: var(--hover-color);
     fill: var(--white);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .clients {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    gap: 30px;
 }
 
 .client-item {
     display: flex;
+    
 }
 
 .client-link {
