--- a/css/styles.css
+++ b/css/styles.css
@@ -163,10 +163,11 @@ img {
     line-height: 1.333;
     align-items: center;
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    /* transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .header-icon {
@@ -352,7 +353,8 @@ img {
     height: 44px;
     border-radius: 50px;
     fill: #afb1b8;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -360,12 +362,10 @@ img {
 .social-link:focus {
     background-color: var(--hover-color);
     fill: var(--white);
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .clients {
     display: flex;
-    /* justify-content: space-between; */
     gap: 30px;
 }
 
@@ -381,18 +381,27 @@ img {
     width: 170px;
     height: 92px;
     margin-top: 50px;
-    border: 1px solid #afb1b8;
+
+    color: #afb1b8;
+
+
+    border: 1px solid currentColor;
     border-radius: 4px;
-    fill: #afb1b8;
+    /* fill: #afb1b8; */
+    fill: currentColor;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+        
     
 }
 
 .client-link:hover,
 .client-link:focus {
-    fill: var(--hover-color);
+    /* fill: var(--hover-color);
     border-color: var(--hover-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    color: var(--hover-color);
 }
 
 /* footer */
