--- a/css/styles.css
+++ b/css/styles.css
@@ -314,6 +314,8 @@ img {
 .team-item {
     background-color: var(--white);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
 }
 
 
@@ -489,6 +491,61 @@ img {
 
 .social-logo {
     fill: currentColor;
+}
+
+/* Modal */
+
+.modal-order {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-order.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal-order.is-hidden .modal-window {
+    transform: translate(-50%, -50%) scale(0.8);
+}
+
+.modal-window {
+    position: absolute;
+    width: 528px;
+    height: 581px;
+    top: 50%;
+    left: 50%;
+    background-color: var(--white);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
+.modal-close {
+    display: block;
+    position: absolute;
+    /* align-items: center;
+    justify-content: center; */
+    padding: 0;
+    top: 8px;
+    right: 8px;
+
+    width: 30px;
+    height: 30px;
+
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    background-color: #fff;
+    cursor: pointer;
 }
 
 /* Portfolio */
