--- a/css/styles.css
+++ b/css/styles.css
@@ -629,7 +629,8 @@ img {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.filter-link:hover .animate {
+.filter-link:hover,
+.filter-link:focus .animate {
     transform: translateY(0);
 }
 
